tests/reference/asr-array_06-5f5f77a.stderr
semantic error: Rank mismatch in array reference: the array `str` has rank `1, but is referenced as rank `2
 --> tests/errors/array_06.f90:5:5
  |
5 |     str(1, 2)(:) = '1234'
  |     ^^^^^^^^^^^^ 
